[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Level_Player/Exp.png" type="Texture" id=1]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=2]
[ext_resource path="res://Script/Collect_EXP.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Light2D:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Light2D:color:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Light2D:color:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.0392157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Light2D:color:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Light2D:color:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Light2D:energy")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Light2D:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.03, -0.25, 0, 0.25, 0, 0.05, -0.25, 0, 0.25, 0, 0.03, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Light2D:color:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Light2D:color:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.0392157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Light2D:color:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Light2D:color:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Light2D:energy")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.497, 10.497 )

[sub_resource type="CircleShape2D" id=5]
radius = 224.544

[node name="Collect_EXP" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_layer = 1024
collision_mask = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
rotation = 0.785398
scale = Vector2( 0.728474, 0.736432 )
texture = ExtResource( 2 )
texture_scale = 0.03
color = Color( 0, 0.0392157, 1, 1 )
energy = 0.7

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.6
color = Color( 0, 0.0862745, 0.756863, 1 )
energy = 0.2

[node name="experience_collect" type="Area2D" parent="." groups=["Exp_collect"]]
collision_layer = 1024
collision_mask = 1026

[node name="CollisionShape2D" type="CollisionShape2D" parent="experience_collect"]
rotation = 0.785398
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 4 )

[node name="seek_player" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="seek_player"]
visible = false
shape = SubResource( 5 )

[connection signal="area_entered" from="experience_collect" to="." method="_on_experience_collect_area_entered"]
[connection signal="body_entered" from="seek_player" to="." method="_on_seek_player_body_entered"]
[connection signal="body_exited" from="seek_player" to="." method="_on_seek_player_body_exited"]
